--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nitrokey-app (0.0.2) unstable; urgency=medium
+nitrokey-app (0.2+trusty0) unstable; urgency=medium
 
   * Initial release for Ubuntu 14.04.
 
