--- a/_debian/changelog
+++ b/_debian/changelog
@@ -1,9 +1,8 @@
-nitrokey-app (0.5) xenial; urgency=low
+nitrokey-app (0.5) xenial; urgency=medium
 
   * Update to version 0.5
 
- -- Szczepan Zalega <szczepan@nitrokey.com> Tue, 27 Sep 2016 14:41:41 +0200
-
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Wed, 28 Sep 2016 11:43:49 +0200
 
 nitrokey-app (0.4) xenial; urgency=low
 
