--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+nitrokey-app (0.5.1) xenial; urgency=low
+
+  * Update to version 0.5.1
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Fri, 07 Oct 2016 18:15:12 +0200
+
 nitrokey-app (0.5) xenial; urgency=low
 
   * Update to version 0.5
 
--- Szczepan Zalega <szczepan@nitrokey.com> Tue, 27 Sep 2016 14:41:41 +0200
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Tue, 27 Sep 2016 14:41:41 +0200
 
 
 nitrokey-app (0.4) xenial; urgency=low
