--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrokey-app (0.6) xenial; urgency=low
+
+  * Update to version 0.6
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Mon, 28 Nov 2016 12:01:00 +0100
+
 nitrokey-app (0.5.1) xenial; urgency=low
 
   * Update to version 0.5.1
