--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrokey-app (0.6.2) xenial; urgency=low
+
+  * Update to version 0.6.2
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Tue, 03 Jan 2017 15:49:07 +0100
+
 nitrokey-app (0.6.1) xenial; urgency=low
 
   * Update to version 0.6.1
