--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrokey-app (0.6.3) xenial; urgency=low
+
+  * Update to version 0.6.3
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Mon, 23 Jan 2017 14:49:39 +0100
+
 nitrokey-app (0.6.2) xenial; urgency=low
 
   * Update to version 0.6.2
