--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrokey-app (1.0beta1) xenial; urgency=medium
+
+  * Beta test
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Sat, 11 Mar 2017 20:35:20 +0100
+
 nitrokey-app (0.6.2) xenial; urgency=low
 
   * Update to version 0.6.2
