--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrokey-app (1.1releaseubuntu1) xenial; urgency=medium
+
+  * Release of v1.1
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Tue, 16 May 2017 13:47:47 +0200
+
 nitrokey-app (1.0release) xenial; urgency=medium
 
   * Release of v1.0
