--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+nitrokey-app (1.3) xenial; urgency=medium
+
+  * Release of v1.3
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Fed, 18 Apr 2018 11:56:37 +0200
+
+nitrokey-app (1.2releaseubuntu2) xenial; urgency=medium
+
+  * Release of v1.2
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Fri, 22 Dec 2017 17:38:56 +0100
+
+nitrokey-app (1.1releaseubuntu1) xenial; urgency=medium
+
+  * Release of v1.1
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Tue, 16 May 2017 13:47:47 +0200
+
+nitrokey-app (1.0release) xenial; urgency=medium
+
+  * Release of v1.0
+
+ -- Szczepan Zalega <szczepan@nitrokey.com>  Tue, 02 May 2017 13:26:56 +0200
+
 nitrokey-app (1.0beta1) xenial; urgency=medium
 
   * Beta test
